style.css
/* Set the font-family for the entire body to Roboto with a generic family of sans-serif */
/* Hint: https://developer.mozilla.org/en-US/docs/Web/CSS/font-family */
body {
  font-family: "Roboto", "sans-serif";
  margin: 0;
}

header {
  /* 
  - Give the header a height of 4rem and background color (#4584b1). What is a rem?
  Hint: https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Values_and_units
  - Give the text a color of #fff and make the font size 2 rem
  - Use flexbox to vertically align the "CodeClan Travel" logo in the center
  Hint: https://developer.mozilla.org/en-US/docs/Web/CSS/align-items
  */

  height: 5rem;
  background-color: #4584b1;
  color: #fff;
  font-size: 2rem;
  display: flex;
  align-items: center;
}

#logo {
  /* The logo element has an id of logo */
  /* Give the logo element a left margin of 40px */
  margin-left: 40px;
}

nav {
  /* Give the nav a background color (#103594) */
  /* Use rem units to give the nav an appropriate height */
  /* Use flexbox to vertially align the nav child elements in the center */
  background-color: #103594;
  height: 4rem;
  display: flex;
}

nav ul {
  /* Use flexbox to layout the li elements horizontally */
  list-style: none;
  display: flex;
  gap: 1 rem;
}

/* Now it's time for the navigation links */
/* Create a CSS block that targets all of the <li> elements that are children of the <nav> element */
/* Use the following properties inside the block. */
/* We haven't provided the values in this case so use the values you think would be appropriate:
  - color
  - font-size
  - list-style
  - margin-right
*/

/* Create a block that targets all of the <a> elements that are children of <li> elements in the <nav>  */
/* Give them a color of #fff and text-decoration of none */

nav > ul > li > a {
  color: white;
  display: flex;
  justify-content: space-between;
  gap: 1rem;
  text-decoration: none;
  display: inline-block;
  padding: 0.5rem;
}

/* Create another block that targets all of the <a> elements that are children of <li> elements in the <nav>  */
/* Use the :hover pseudo-class to add an underline on hover */

a:hover {
  text-decoration: underline;
}

/* Where to go section includes an <h3> element and a <form>  */
/* Create a block that targets the where-togo class and give it a background color of #040E27 and suitable padding */
/* Hint: https://developer.mozilla.org/en-US/docs/Web/CSS/padding */

.where-togo {
  background-color: #040e27;
  padding: 1rem;
}

/* Create a block that targets the <h3> child of the where-togo class  */
/* Use the font-size and color properties to style the <h3> element */

.where-togo > h3 {
  color: white;
  font-size: 2rem;
}

.search-form {
  display: flex;
  flex-direction: row;
}

/* The search form has a class of search-form. We want the input fields to  */
/* display horizontally. The easiest way to make a group of elements horizontal is to use flexbox */
/* Create a block that targets the search-form class and give it a display of flex */

/* Notice that each form input is wrapped in a div */
/* Create a block that targets the input-field class and apply a suitable width and margin */
.input-field {
  width: 100px;
  margin: 10px;
  margin-right: 100px;
}

/* Styling the elements of Forms is difficult. */
/* Hint: https://developer.mozilla.org/en-US/docs/Learn/Forms/Advanced_form_styling */

input {
  /* Style the form input elements using width, height, padding-left and border-radius */
  width: 180px;
  height: 30px;
  padding: 10px;
  border-radius: 5px;
}

.nice-select {
  /* Select elements are not imput elements! Therefore we've given the <select> element it's own class  */
  /* They are notoriously difficult to style with css */
  /* In this case you can use width, height, font-size, color, border and border-radius */
  width: 180px;
  height: 52px;
  font-size: 14px;
  color: #8e8e8e;
  border-color: #040e27;
  border-radius: 5px;
}

.search-btn {
  /* Buttons are probably the most fun to style! The border-radius and cursor properties can quickly make a button look good */
  /* Style the search button using the following properties: */
  /* 
  - background
  - color
  - font-size
  - height
  - width
  - border
  - border-radius
  - cursor
  */
  background-color: #fe4a52;
  color: #fff;
  font-size: 14px;
  height: 52px;
  width: 120px;
  border-color: #040e27;
  border-radius: 5px;
  cursor: pointer;
}

.container {
  /* The destinations are enclosed in an article element that we want to make a grid */
  /* Set the display property to 'grid' and justify the content */
  display: grid;
  justify-content: center;
  align-content: center;
  grid-template-areas:
    "single-destination single-destination single-destination"
    "single-destination single-destination single-destination";
}

.row {
  /* The row of the grid has 3 columns which should be the same width and roughly a third of the available space */
  /* Use the grid-template-columns property to set each column to 30% */
  /* You can experiment with different units for the width values */
  /* Hint: https://developer.mozilla.org/en-US/docs/Web/CSS/grid-template-columns */
  grid-template-columns: 30%;
  width: 80%;
}

.section-title {
  /* The <div> with class section-title contains an <h3> child which we want to center */
  /* The easiest way to center child elements is to set the display property to 'flex' and justify the content */
  display: flex;
  justify-content: center;
}

.single-destination {
  /* Use the margin property to make some space between the destinations */
  /* Set the overflow to 'hidden' */
  /* The overflow CSS shorthand property sets the desired behaviour for an element's overflow 
    — i.e. when an element's content is too big to fit. In this case, the image is too big too fit. */
  display: grid;
  align-items: center;
  justify-items: center;
  margin: 10px;
  overflow: hidden;
}

img {
  /* Set the max-width property to 100% */
  max-width: 100%;
}

/* Let's take the training wheels off. Finish off the page by adding styles to the remaining blocks */

.testimonial-area {
  display: grid;
  justify-content: center;
  align-content: center;
  grid-template-areas: "single-testmonial single-testmonial single-testmonial";
  background-color: #383f50;
}

.single-testmonial {
  background-color: #f0f9fe;
  border-radius: 5px;
  padding: 50px;
  margin: 30px;
  grid-auto-columns: minmax(0, 1fr);
  grid-auto-flow: column;
}

.footer {
  background-color: #040e27;
  color: #fff;
  display: grid;
  grid-template-areas: "footer-widget footer-widget";
  grid-template-columns: 70%;
  padding: 50px;
}

.footer-widget p {
  color: #aab1b6;
}

.footer-widget a:hover {
  color: white;
}

.footer-widget ul li {
  padding: 10px;
}

.footer-widget a {
  color: #aab1b6;
}

/* Media Queries */

@media (max-width: 720px) {
  /* Add some responsive code here */
  /* Make the destinations stack on top of each other */
  /* Make the form input stack on top of each other */
}

